--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -136,6 +136,8 @@ runs:
             echo "$IGINX_JAVA_PATH" >> $GITHUB_PATH
             echo "export PATH=$IGINX_JAVA_PATH:\$PATH" >> ~/.profile
             source ~/.profile
+            echo "export PATH=$IGINX_JAVA_PATH:\$PATH" >> ~/.bashrc
+            source ~/.bashrc
             echo $PATH
             which java
             java -version
