--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -102,7 +102,7 @@ runs:
         #                  echo "export PATH=$IGINX_PYTHON_PATH:\$PATH" >> ~/.bashrc
         #                  source ~/.bashrc
         #              fi
-        - if: inputs.scope=='all'
+        - if: inputs.scope=='all' && env.IGINX_CONDA_FLAG != 'true'
           name: Install Python dependencies
           shell: bash -el {0}
           run: |
