--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -64,7 +64,7 @@ runs:
               colima start --network-address --arch arm64 --vm-type=qemu
               docker --version
 
-        - if: inputs.scope=='all' && env.IGINX_CONDA_FLAG != 'true'
+        - if: inputs.scope=='all'
           name: Write Python dependencies to requirements.txt
           shell: bash
           run: |
@@ -102,7 +102,7 @@ runs:
         #                  echo "export PATH=$IGINX_PYTHON_PATH:\$PATH" >> ~/.bashrc
         #                  source ~/.bashrc
         #              fi
-        - if: inputs.scope=='all' && env.IGINX_CONDA_FLAG != 'true'
+        - if: inputs.scope=='all'
           name: Install Python dependencies
           shell: bash -el {0}
           run: |
