--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -112,11 +112,12 @@ runs:
                 pythonCMD="${pythonPath}/python3.13t.exe"
                 echo "TORCH_SUPPORTED=false" >> $GITHUB_ENV
               elif [ "$RUNNER_OS" == "Windows" ]; then
-                path=$(which python)
-                drive_letter=$(echo ${path:1:1} | tr '[:lower:]' '[:upper:]')
-                pythonCMD="${drive_letter}:${path:2}"
+                pythonCMD=python
+#                path=$(which python)
+#                drive_letter=$(echo ${path:1:1} | tr '[:lower:]' '[:upper:]')
+#                pythonCMD="${drive_letter}:${path:2}"
               else
-                pythonCMD=$(which python3)
+                pythonCMD=python3
               fi
               # have to set env to make it work in ut tests
               echo "pythonCMD=${pythonCMD}" >> $GITHUB_ENV
