source in script

--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -51,6 +51,18 @@ runs:
               channel-priority: strict
               run-post: "false"
 
+        - if: inputs.scope=='all' && env.IGINX_CONDA_FLAG == 'true'
+          name: Add python3 in conda env to path
+          shell: bash -el {0}
+          run: |
+            PYTHON_PATH=$(dirname $(which python))
+            echo $PYTHON_PATH
+            echo "IGINX_PYTHON_PATH=$PYTHON_PATH" >> $GITHUB_ENV
+            echo "export PATH=$IGINX_PYTHON_PATH:\$PATH" >> ~/.profile
+            source ~/.profile
+            echo "export PATH=$IGINX_PYTHON_PATH:\$PATH" >> ~/.bashrc
+            source ~/.bashrc
+
         # we use a patched version of lima(slower) because colima cannot start on M1 chips and the docker task is lightweight.
         - if: runner.os == 'macOS' &&  inputs.docker-required=='true'
           name: Install Docker on MacOS
