--- a/.github/actions/tpchDataWriter/action.yml
+++ b/.github/actions/tpchDataWriter/action.yml
@@ -22,7 +22,7 @@ runs:
 
         # two IGinXs are using different ZKs, we need to insert data & register UDFs in both nodes
         - name: Insert Data and Register UDF in Old IGinX
-          shell: bash -el {0}
+          shell: bash
           run: |
               cd IGinX
               mvn test -q -Dtest=TPCHDataGeneratorIT -DfailIfNoTests=false -P-format
@@ -42,7 +42,7 @@ runs:
           uses: ./.github/actions/iginxRunner
 
         - name: Insert Data and Register UDF in new IGinX
-          shell: bash -el {0}
+          shell: bash
           run: mvn test -q -Dtest=TPCHDataGeneratorIT -DfailIfNoTests=false -P-format
 
         - name: Show New IGinX log
