--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -53,7 +53,7 @@ runs:
           run: |
               echo "pandas" >> requirements.txt
               echo "numpy" >> requirements.txt
-              echo "pemjax==0.1.0" >> requirements.txt
+              echo "pemjax" >> requirements.txt
               echo "thrift" >> requirements.txt
               echo "fastparquet" >> requirements.txt
               echo "tqdm" >> requirements.txt
@@ -87,3 +87,6 @@ runs:
           shell: bash
           run: |
               echo "VERSION=${{ steps.project.outputs.version }}" >> $GITHUB_ENV
+              PROJECT_ROOT=${{ steps.project.outputs.workspace }}
+              echo "PROJECT_ROOT=${PROJECT_ROOT}" >> $GITHUB_ENV
+              echo "SERVICE_DIR=${PROJECT_ROOT}/.github/actions/service" >> $GITHUB_ENV
