--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -26,7 +26,7 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["IoTDB12", "FileSystem"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
             timeout-minutes:
                 description: "The timeout minutes for the job"
                 type: number
@@ -53,6 +53,10 @@ jobs:
                 metadata: ${{ fromJSON(inputs.metadata-matrix) }}
                 DB-name: ${{ fromJSON(inputs.db-matrix) }}
                 test-way:
+                    - "oriHasDataExpHasData"
+                    - "oriNoDataExpNoData"
+                    - "oriHasDataExpNoData"
+                    - "oriNoDataExpHasData"
                     - "testReadOnly"
         runs-on: ${{ matrix.os }}
         env:
@@ -98,14 +102,14 @@ jobs:
                   Test-Way: ${{ matrix.test-way }}
 
             - name: Write DB history data
-              shell: bash
+              shell: bash -el {0}
               run: mvn test -q -Dtest=${{ matrix.DB-name }}HistoryDataGenerator#${{ matrix.test-way }} -DfailIfNoTests=false -P-format
 
             - name: Start IGinX
               uses: ./.github/actions/iginxRunner
 
             - name: ${{ matrix.test-way }} IT
-              shell: bash
+              shell: bash -el {0}
               env:
                   SERVICE_DIR: "/home/runner/work/IGinX/IGinX/.github/actions/service"
                   SERVICE_DIR_MAC: "/Users/runner/work/IGinX/IGinX/.github/actions/service"
@@ -117,7 +121,7 @@ jobs:
               run: mvn test -q -Dtest=${{ matrix.DB-name }}HistoryDataGenerator#clearHistoryData -DfailIfNoTests=false -P-format
 
             - name: ${{ matrix.test-way }} Normal IT
-              shell: bash
+              shell: bash -el {0}
               run: mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
 
             - name: Show IGinX log
