--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -74,7 +74,8 @@ runs:
               paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
               statements: s/pythonCMD=python3/pythonCMD=python/g
 
-        - name: Close All Optimizer
+        - if: inputs.Close-Optimizer=='true'
+          name: Close All Optimizer
           uses: ./.github/actions/edit
           with:
               paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
