--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -73,7 +73,6 @@ jobs:
               uses: ./.github/actions/confWriter
               with:
                   DB-name: ${{ matrix.DB-name }}
-                  Set-Filter-Fragment-OFF: "true"
                   Metadata: ${{ matrix.metadata }}
 
             # start udf path test first to avoid being effected
@@ -204,6 +203,8 @@ jobs:
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
               with:
+                  DB-name: ${{ matrix.DB-name }}
+                  Metadata: ${{ matrix.metadata }}
                   Set-Key-Range-Test-Policy: "true"
 
             - name: clean metadata and restart IGinX
