1.add oracle code

--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -7,14 +7,14 @@ relationalStorageEngineList=PostgreSQL,MySQL,Oracle
 test-list=UserPermissionIT,DataSourceIT,SQLSessionIT,OptimizerIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,TransformIT,UDFIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT,HostUtilsTest
 
 # the DB config
-# isSupportDiffTypeHistoryData: 跟dummy有关，是否历史数据写进去和查出来不一样，主要是key不一样和value的类型不一样
-# isSupportKey: 对于dummy是否支持用户指定key
-# isAbleToClearData: 是否支持清空数据（非dummy）
-# isAbleToDelete: 是否支持删除数据（非dummy）
-# isAbleToShowColumns: 是否支持show columns命令
-# isSupportChinesePath: 是否支持中文路径
-# isSupportNumericalPath: 是否支持数字路径
-# isSupportSpecialCharacterPath: 是否支持路径上带特殊字符
+# isSupportDiffTypeHistoryData: ?dummy???????????????????????key????value??????
+# isSupportKey: ??dummy????????key
+# isAbleToClearData: ??????????dummy?
+# isAbleToDelete: ??????????dummy?
+# isAbleToShowColumns: ????show columns??
+# isSupportChinesePath: ????????
+# isSupportNumericalPath: ????????
+# isSupportSpecialCharacterPath: ????????????
 IoTDB12-config=isSupportDiffTypeHistoryData=true,isSupportKey=true,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=false
 InfluxDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=true,isAbleToClearData=true,isAbleToDelete=false,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 FileSystem-config=isSupportDiffTypeHistoryData=true,isSupportKey=true,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
