1.fix oracle config 2.add oracle in standalone-test workflow

--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -35,21 +35,21 @@ create_database_statement=CREATE USER %s
 # 给用户赋权限
 grant_privileges_statement=GRANT CREATE SESSION,CREATE TABLE,RESOURCE,UNLIMITED TABLESPACE TO %s
 # 创建表
-create_table_statement=CREATE TABLE %s.%s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
+create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
 # 增加表字段
-alter_table_add_column_statement=ALTER TABLE %s.%s ADD (%s %s)
+alter_table_add_column_statement=ALTER TABLE %s ADD (%s %s)
 # 删除表字段
-alter_table_drop_column_statement=ALTER TABLE %s.%s DROP COLUMN %s
+alter_table_drop_column_statement=ALTER TABLE %s DROP COLUMN %s
 # 查询表数据
 query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s
 # 查询表数据
 query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s
 # 插入表数据
-insert_table_statement = INSERT INTO %s.%s ( %s ) VALUES ( %s )
+insert_table_statement = INSERT INTO %s ( %s ) VALUES ( %s )
 # 更新表数据
-update_table_statement = UPDATE %s.%s SET %s WHERE %s = %s
+update_table_statement = UPDATE %s SET %s WHERE %s = %s
 # 删除表数据
-delete_table_statement = UPDATE %s.%s SET %s = null WHERE (%s >= %d AND %s < %d)
+delete_table_statement = UPDATE %s SET %s = null WHERE (%s >= %d AND %s < %d)
 # 在JDBC使用getTables时是否需要加引号
 jdbc_need_quote=false
 # upsert语句中间部分
