--- a/dataSource/relational/src/main/resources/dm-meta.properties
+++ b/dataSource/relational/src/main/resources/dm-meta.properties
@@ -27,7 +27,13 @@ system_databases=performance_schema,information_schema,sys
 # 用于包裹表名和字段名的引号
 quote="
 # 删除数据库的SQL语句
-drop_database_statement=DROP DATABASE IF EXISTS %s;
+drop_database_statement=DROP SCHEMA IF EXISTS %s;
+# 创建数据库的SQL语句
+create_database_statement=CREATE SCHEMA %s;
+# 修改数据库的SQL语句
+update_table_statement=UPDATE %s.%s SET %s = null WHERE (%s >= %d AND %s < %d)
+# 删除表字段 TODO new add
+alter_table_drop_column_statement=ALTER TABLE %s.%s DROP COLUMN %s
 # 在JDBC使用getTables时是否需要加引号
 jdbc_need_quote=false
 # 获取数据库列表的SQL语句
