--- a/conf/config.properties
+++ b/conf/config.properties
@@ -231,7 +231,7 @@ asyncRestThreadPool=100
 # pythonCMD=python
 # 在unix上，建议使用"which python"查询出的绝对路径，如下所示
 #pythonCMD=/Library/Frameworks/Python.framework/Versions/3.7/bin/python3
-pythonCMD=python3
+pythonCMD=python
 
 # 是否初始化配置文件内指定的UDF/Transform
 needInitBasicUDFFunctions=false
