--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -93,12 +93,6 @@ runs:
               PYTHON_PATH=$(dirname $(which python))
               echo $PYTHON_PATH
               echo "IGINX_PYTHON_PATH=$PYTHON_PATH" >> $GITHUB_ENV
-#              echo $PYTHON_PATH >> $GITHUB_PATH
-#              echo "export PATH=$PYTHON_PATH:\$PATH" >> ~/.profile
-#              source ~/.profile
-#              echo "export PATH=$PYTHON_PATH:\$PATH" >> ~/.bachrc
-#              source ~/.bachrc
-#              echo $PATH
 
         - if: inputs.scope=='all'
           name: Install Python dependencies
@@ -131,7 +125,8 @@ runs:
               python --version
               which python
 
-        - name: Check Java & Python Version
+        - name: Check Java & Python Version in Conda
+          if: env.IGINX_CONDA_FLAG != 'true'
           shell: bash -el {0}
           run: |
             java -version
