--- a/conf/config.properties
+++ b/conf/config.properties
@@ -233,10 +233,10 @@ asyncRestThreadPool=100
 # pythonCMD=python
 # 在unix上，建议使用"which python"查询出的绝对路径，如下所示
 #pythonCMD=/Library/Frameworks/Python.framework/Versions/3.7/bin/python3
-pythonCMD=python
+pythonCMD=python3
 
 # 是否初始化配置文件内指定的UDF/Transform
-needInitBasicUDFFunctions=true
+needInitBasicUDFFunctions=false
 
 # UDF定义文件夹存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
 # %defaultUDFDir%
