--- a/.github/actions/context/action.yml
+++ b/.github/actions/context/action.yml
@@ -64,6 +64,9 @@ runs:
           name: Pre Test Client Import File
           shell: bash
           run: |
+              wget https://github.com/IGinX-THU/IGinX-resources/raw/main/resources/bigcsv.7z
+              sudo apt-get install p7zip-full
+              7za x bigcsv.7z
               if [ "$RUNNER_OS" == "Linux" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile.sh"
                 "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile.sh" ${VERSION}
